Добавление параметра в фильтр типа критерия
